# events-face

./: .env.example  .python-version  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  manage.py  pyproject.toml
src/: db.sqlite3  urls.py
src/authapp/: urls.py  views.py
src/core/: asgi.py  settings.py
src/events/: admin.py  models.py  serializers.py  tasks.py  views.py
src/events/management/commands/: cleanup_old_events.py
src/events/migrations/: 0001_initial.py
src/sync/: models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
